--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
+        "less": "^4.2.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^4.4.0",
+        "vue": "^3.2.36"
     }
 }
