--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.1.2",
+        "@types/node": "^20.8.3",
+        "axios": "^1.5.1",
         "laravel-vite-plugin": "^0.8.0",
         "less": "^4.2.0",
         "vite": "^4.0.0"
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.4.0",
-        "vue": "^3.2.36"
+        "vue": "^3.2.36",
+        "vue-google-oauth2": "^1.5.10"
     }
 }
