--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^4.4.0",
         "vue": "^3.2.36",
-        "vue-google-oauth2": "^1.5.10"
+        "vue-google-oauth2": "^1.5.10",
+        "vue-router": "^4.2.5"
     }
 }
